Refactor header styles and add SCSS variables for consistent theming

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,8 @@
+@import "variables";
 @import "../../node_modules/bootstrap/scss/bootstrap";
 @import "../../node_modules/bootstrap-icons/font/bootstrap-icons";
 @import "components/header";
+
+* {
+  scroll-behavior: smooth;
+}
