Add initial HTML structure for Tradeauction website with navigation and search functionality

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,3 +4,9 @@ $body-bg: #e9ecef;
 // Theme-colors
 $primary: #2a476b;
 $secondary: #1abc9c;
+
+// Font family
+$font-family-base: "Open Sans", sans-serif;
+
+// Font size
+$font-size-navigation: 32px;
