--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -16,6 +16,10 @@ header {
         color: $secondary;
       }
     }
+    a {
+      font-family: $font-family-base;
+      font-size: $font-size-navigation;
+    }
   }
 
   .display-credits {
@@ -24,8 +28,20 @@ header {
     background: black;
     opacity: 0.66;
     border-radius: 8px;
-    color: $body-bg;
-    text-decoration: underline;
+    i {
+      font-family: "Lato", sans-serif;
+      font-size: 20px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      text-decoration-line: underline;
+      text-decoration-style: solid;
+      text-decoration-skip-ink: auto;
+      text-decoration-thickness: auto;
+      text-underline-offset: auto;
+      text-underline-position: from-font;
+      color: $body-bg;
+    }
   }
 }
 
