--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -25,8 +25,7 @@ header {
   .display-credits {
     margin-right: 1em;
     padding: 0.5em 1em;
-    background: black;
-    opacity: 0.66;
+    background: rgba(0, 0, 0, 0.66);
     border-radius: 8px;
     i {
       font-family: "Lato", sans-serif;
