Add listing section with button and toggle switch for active listings

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,6 +3,7 @@ $bootstrap-icons-font-dir: "/fonts";
 @import "~bootstrap/scss/bootstrap";
 @import "~bootstrap-icons/font/bootstrap-icons";
 @import "components/header";
+@import "components/buttons";
 
 * {
   scroll-behavior: smooth;
