--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,6 +5,7 @@ $bootstrap-icons-font-dir: "/fonts";
 @import "components/header";
 @import "components/buttons";
 @import "components/switches";
+@import "components/cards";
 
 * {
   scroll-behavior: smooth;
