Add footer component with styles and update index files

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,6 +6,7 @@ $bootstrap-icons-font-dir: "/fonts";
 @import "components/buttons";
 @import "components/switches";
 @import "components/cards";
+@import "components/footer";
 
 * {
   scroll-behavior: smooth;
