Update layout and styles for header and footer components

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -23,7 +23,7 @@ header {
   }
 
   .display-credits {
-    margin-right: 1em;
+    margin-right: 5rem;
     padding: 0.5em 1em;
     background: rgba(0, 0, 0, 0.66);
     border-radius: 8px;
