--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -1,5 +1,5 @@
 .card {
-  width: 18rem;
+  width: 19rem;
   background: #d9d9d9;
   a {
     text-decoration: none;
@@ -9,11 +9,37 @@
     aspect-ratio: 326/218;
   }
 
+  small {
+    color: #49454f;
+  }
+
+  .card-author {
+    font-family: "Lato", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #49454f;
+  }
+
+  .card-text {
+    font-family: "Lato", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+  }
+
   .card-recent-bids {
     ul {
       padding: 0;
       margin: 0;
       list-style: none;
+      font-family: "Lato", sans-serif;
+      font-size: 14px;
+      font-weight: 400;
+    }
+
+    h2 {
+      font-family: "Lato", sans-serif;
+      font-size: 14px;
+      font-weight: 700;
     }
   }
 }
