--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -17,3 +17,15 @@ h1 {
   font-size: 32px;
   font-weight: 700;
 }
+
+h2 {
+  font-family: $font-family-base;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+small {
+  font-family: "Lato", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+}
