--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -1,6 +1,7 @@
 .card {
   width: 19rem;
   background: #d9d9d9;
+  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.25));
   a {
     text-decoration: none;
   }
