Add bid and end time display to card component

--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -14,6 +14,21 @@
     color: #49454f;
   }
 
+  .card-display-bids {
+    font-family: "Lato", sans-serif;
+    font-size: 14px;
+    background: rgba(0, 0, 0, 0.66);
+    width: 35%;
+  }
+
+  .card-display-ends {
+    font-family: "Lato", sans-serif;
+    font-size: 14px;
+    background: rgba(0, 0, 0, 0.66);
+    width: 50%;
+    margin-top: 9.5rem;
+  }
+
   .card-author {
     font-family: "Lato", sans-serif;
     font-size: 16px;
