--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -14,6 +14,10 @@
     color: #49454f;
   }
 
+  .card-body {
+    background: #d9d9d9;
+  }
+
   .card-display-bids {
     font-family: "Lato", sans-serif;
     font-size: 14px;
@@ -57,5 +61,13 @@
       font-size: 14px;
       font-weight: 700;
     }
+  }
+}
+
+.place-bid-card {
+  background: #d9d9d9;
+  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.25));
+  input[type="number"] {
+    text-align: center;
   }
 }
