--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -14,10 +14,6 @@
     color: #49454f;
   }
 
-  .card-body {
-    background: #d9d9d9;
-  }
-
   .card-display-bids {
     font-family: "Lato", sans-serif;
     font-size: 14px;
@@ -64,10 +60,34 @@
   }
 }
 
+.card-detail {
+  max-width: 540px;
+  min-width: 440px;
+  a {
+    text-decoration: none;
+  }
+
+  .card-body {
+    background: #d9d9d9;
+    filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.25));
+  }
+  .img-fluid {
+    object-fit: cover;
+  }
+}
+
 .place-bid-card {
-  background: #d9d9d9;
-  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.25));
+  justify-self: flex-end;
+  form {
+    background: #d9d9d9;
+    filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.25));
+  }
   input[type="number"] {
     text-align: center;
   }
+}
+
+.bid-history-list {
+  background: #d9d9d9;
+  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.25));
 }
