Fix email input ID and label for consistency; update navbar-brand position for responsive design

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,6 +5,11 @@ header {
 
   .navbar {
     min-height: 150px;
+    @media (min-width: 992px) {
+      .navbar-brand {
+        position: absolute;
+      }
+    }
     .nav-link {
       color: variables.$body-bg;
       &:hover {
