--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -129,6 +129,10 @@
   background: #d9d9d9;
   filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.25));
 
+  .img-fluid {
+    height: 100%;
+  }
+
   .card-profile-img {
     width: 120px;
     height: 120px;
