--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -43,6 +43,7 @@
   }
 
   .card-body {
+    background: #d9d9d9;
     .card-body-bid-info {
       font-family: "Lato", sans-serif;
       font-size: 12px;
