Refactor build script paths, enhance navbar styling, and update card background variables for consistency

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,9 @@
 // Body background color
 $body-bg: #e9ecef;
 
+// Card background color
+$card-bg: #d9d9d9;
+
 // Theme-colors
 $primary: #2a476b;
 $secondary: #1abc9c;
