--- a/src/scss/components/_switches.scss
+++ b/src/scss/components/_switches.scss
@@ -7,5 +7,7 @@
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     align-self: end;
+    font-family: "Lato", sans-serif;
+    font-size: 16px;
   }
 }
