Refactor footer styles for consistency, remove unused header template, and enhance search functionality in index page

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -76,3 +76,10 @@ header {
 .navbar-brand {
   z-index: 10;
 }
+
+.search-container {
+  @media (max-width: 768px) {
+    flex-direction: column;
+    width: 100%;
+  }
+}
