--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -17,9 +17,15 @@ header {
           height: 75px;
         }
       }
-
+    }
+    @media (max-width: 991px) {
       .navbar-collapse {
         text-align: center;
+      }
+    }
+    @media (min-width: 992px) {
+      .navbar-collapse {
+        flex-direction: column;
       }
     }
     .nav-link {
@@ -47,6 +53,7 @@ header {
     background: rgba(0, 0, 0, 0.66);
     border-radius: 8px;
     right: 0;
+    top: 3rem;
     i {
       font-family: "Lato", sans-serif;
       font-size: 20px;
@@ -60,6 +67,15 @@ header {
       text-underline-offset: auto;
       text-underline-position: from-font;
       color: variables.$body-bg;
+    }
+    @media (max-width: 991px) {
+      top: 4.8rem;
+    }
+    @media (max-width: 768px) {
+      padding: 0.5em 1em;
+      background: rgba(0, 0, 0, 0.66);
+      border-radius: 8px;
+      top: 3.5rem;
     }
   }
   .custom-search-button {
@@ -78,8 +94,17 @@ header {
 }
 
 .search-container {
-  @media (max-width: 768px) {
-    flex-direction: column;
-    width: 100%;
+  @media (max-width: 991px) {
+    form {
+      flex-direction: column;
+      padding-top: 2em;
+      padding-bottom: 1em;
+    }
+  }
+  @media (min-width: 992px) {
+    flex-direction: row;
+    padding-top: 2em;
+    padding-bottom: 1em;
+    width: 50%;
   }
 }
