chore: refactor navigation styles and update color variables for better contrast

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,8 +6,9 @@ $card-bg: #d9d9d9;
 
 // Theme-colors
 $primary: #2a476b;
-$secondary: #1abc9c;
-
+$active-nav-item: #1abc9c;
+$secondary: #005715;
+$link-color: #0057ca;
 // Font family
 $font-family-base: "Open Sans", sans-serif;
 
