--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -84,7 +84,6 @@
 
 .card-detail {
   max-width: 540px;
-  min-width: 440px;
   a {
     text-decoration: none;
   }
@@ -93,17 +92,17 @@
     flex: 2;
   }
 
-  .col-md-8 {
+  /* .col-md-8 {
     flex: 1;
     min-width: 320px;
-  }
+  } */
 
-  .card-body {
+  .row {
     background: variables.$card-bg;
     filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.25));
   }
   .img-fluid {
-    object-fit: cover;
+    height: 100%;
   }
 }
 
@@ -141,6 +140,9 @@
 
   .img-fluid {
     height: 100%;
+    @media (max-width: 767px) {
+      border-radius: 0.5rem 0.5rem 0 0 !important;
+    }
   }
 
   .card-profile-img {
