--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,6 +8,7 @@ $bootstrap-icons-font-dir: "/fonts";
 @use "components/cards";
 @use "components/footer";
 @use "components/authorization";
+@use "components/product_detail";
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 * {
