--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,8 +6,13 @@ $card-bg: #d9d9d9;
 
 // Theme-colors
 $primary: #2a476b;
+$primary-hover: #3b5d8a;
+$primary-active: #1e3554;
 $active-nav-item: #1abc9c;
 $secondary: #005715;
+$secondary-hover: #007a1f;
+$secondary-active: #00440e;
+
 $link-color: #0057ca;
 // Font family
 $font-family-base: "Open Sans", sans-serif;
