fix: enhance edit profile modal layout and styling for better user experience

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -12,6 +12,7 @@ $active-nav-item: #1abc9c;
 $secondary: #005715;
 $secondary-hover: #007a1f;
 $secondary-active: #00440e;
+$modal-bg: #625b71;
 
 $link-color: #0057ca;
 // Font family
