--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -122,6 +122,9 @@
       font-size: 16px;
       font-weight: 700;
     }
+    .bid-list-name {
+      min-width: 50%;
+    }
     .bid-list-date {
       font-family: "Lato", sans-serif;
       font-size: 14px;
