--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -116,13 +116,20 @@
 .bid-history-list {
   .bid-history-list-body {
     background: variables.$card-bg;
+    ul {
+      padding: 0;
+      margin: 0;
+      list-style: none;
+    }
+
     filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.25));
     .bid-list-name .bid-list-amount {
       font-family: "Lato", sans-serif;
       font-size: 16px;
       font-weight: 700;
     }
-    .bid-list-name {
+    .bid-list-name,
+    .bid-list-name-heading {
       min-width: 50%;
     }
     .bid-list-date {
