--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -5,6 +5,16 @@
   background: variables.$card-bg;
   filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.25));
 
+  .card-author {
+    cursor: pointer;
+    font-family: "Lato", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    a {
+      color: variables.$link-color;
+    }
+  }
+
   @media (max-width: 767px) {
     width: 100%;
     margin-bottom: 1rem;
@@ -35,15 +45,6 @@
     background: rgba(0, 0, 0, 0.66);
     width: 50%;
     margin-top: 9.5rem;
-  }
-
-  .card-author {
-    font-family: "Lato", sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    a {
-      color: variables.$link-color;
-    }
   }
 
   .card-text {
@@ -91,6 +92,16 @@
 .card-detail {
   a {
     text-decoration: none;
+  }
+
+  .card-author {
+    cursor: pointer;
+    font-family: "Lato", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    a {
+      color: variables.$link-color;
+    }
   }
 
   .row {
