feat: enhance card and header styles with improved spacing and hover effects

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,6 +9,7 @@ $primary: #2a476b;
 $primary-hover: #3b5d8a;
 $primary-active: #1e3554;
 $active-nav-item: #1abc9c;
+$nav-item-hover: #2ecc71;
 $secondary: #005715;
 $secondary-hover: #007a1f;
 $secondary-active: #00440e;
