feat: add profile link to bidder name in bid history and style links in bid history list

--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -138,6 +138,10 @@
 }
 
 .bid-history-list {
+  a {
+    color: variables.$link-color;
+    text-decoration: none;
+  }
   .bid-history-list-body {
     background: variables.$card-bg;
     ul {
