--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -120,8 +120,7 @@
 
     &:hover {
       transform: scale(1.05); // Slightly enlarge the image on hover
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); // Add a shadow for emphasis
-      border: 1px solid rgba(25, 231, 87, 0.8); // Add a subtle white border
+      box-shadow: 0 4px 8px variables.$primary-hover; // Add a shadow effect on hover
     }
   }
 }
@@ -187,6 +186,14 @@
     @media (max-width: 767px) {
       width: 90px;
       height: 90px;
+    }
+  }
+}
+
+#my-listings {
+  .card {
+    &:hover {
+      filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.25));
     }
   }
 }
