--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -197,6 +197,13 @@
       height: 90px;
     }
   }
+
+  .card-text {
+    @media (max-width: 767px) {
+      width: 100% !important;
+      padding-right: 0.5rem;
+    }
+  }
 }
 
 #my-listings {
