--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -3,13 +3,16 @@
 .add-listing-button {
   background-color: variables.$secondary;
   border-color: variables.$secondary;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   &:hover {
     background-color: variables.$secondary-hover;
     border-color: variables.$secondary-hover;
+    box-shadow: 0px 6px 12px 0px rgba(0, 0, 0, 0.3);
   }
   &:active {
     background-color: variables.$secondary-active !important;
     border-color: variables.$secondary-active !important;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
   }
   padding: 10px 24px;
   font-family: "Lato", sans-serif;
