--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -14,7 +14,8 @@
 }
 
 .place-bid-button,
-.add-listing-button {
+.add-listing-button,
+.btn-custom-secondary {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   @include button-variant(
     // Background color
@@ -53,23 +54,30 @@
 }
 
 .btn-custom {
-  background-color: variables.$primary;
-  border-color: variables.$primary;
-  color: variables.$body-bg;
+  @include button-variant(
+    // Background color
+    variables.$primary,
+    // Border color
+    variables.$primary,
+    // Text color
+    variables.$body-bg,
+    // Hover background color
+    variables.$primary-hover,
+    // Hover border color
+    variables.$primary-hover,
+    // Hover text color
+    variables.$body-bg,
+    // Active background color
+    variables.$primary-active,
+    // Active border color
+    variables.$primary-active,
+    // Active text color
+    variables.$body-bg
+  );
   padding: 10px 24px;
-  font-size: 14px;
+  font-size: 1rem;
   font-weight: 400;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  &:hover {
-    background-color: variables.$primary-hover;
-    border-color: variables.$primary-hover;
-    color: variables.$body-bg;
-  }
-  &:active {
-    background-color: variables.$primary-active !important;
-    border-color: variables.$primary-active !important;
-    color: variables.$body-bg !important;
-  }
 }
 
 [name="edit-profile"],
