--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -100,6 +100,17 @@
     text-decoration: none;
   }
 
+  @media (max-width: 767px) {
+    width: 100%;
+    .img-fluid {
+      height: 100%;
+      min-height: 12rem;
+      @media (max-width: 767px) {
+        border-radius: 0.5rem 0.5rem 0 0 !important;
+      }
+    }
+  }
+
   .card-author {
     cursor: pointer;
     font-family: "Lato", sans-serif;
