--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -11,9 +11,14 @@
 .card {
   width: 19rem;
   min-width: min-content;
-
+  border-width: 0;
   background: variables.$card-bg;
   filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.25));
+
+  .card-header,
+  .card-img-top {
+    border-width: 0;
+  }
 
   .card-author {
     cursor: pointer;
@@ -61,6 +66,7 @@
 
   .card-body {
     background: variables.$card-bg;
+    border-radius: 0 0 0.5rem 0.5rem;
     .card-body-bid-info {
       font-family: "Lato", sans-serif;
       font-size: 12px;
@@ -100,14 +106,16 @@
     text-decoration: none;
   }
 
+  .item-detail-container {
+    border-radius: 0.5rem;
+  }
+
   @media (max-width: 767px) {
     width: 100%;
     .img-fluid {
       height: 100%;
       min-height: 12rem;
-      @media (max-width: 767px) {
-        border-radius: 0.5rem 0.5rem 0 0 !important;
-      }
+      border-radius: 0.5rem 0.5rem 0 0 !important;
     }
   }
 
@@ -147,6 +155,10 @@
 
 .place-bid-card {
   justify-self: flex-end;
+  padding-right: 0;
+  @media (max-width: 767px) {
+    padding-left: 0;
+  }
   form {
     background: variables.$card-bg;
     filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.25));
