feat: add bid history rendering with headings; include bidlist styles

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,6 +6,7 @@ $bootstrap-icons-font-dir: "/fonts";
 @use "components/buttons";
 @use "components/switches";
 @use "components/cards";
+@use "components/bidlist";
 @use "components/footer";
 @use "components/authorization";
 @use "components/product_detail";
