feat: implement create, edit, and delete functionality in a unified modal for item management

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -14,6 +14,9 @@ $secondary: #005715;
 $secondary-hover: #007a1f;
 $secondary-active: #00440e;
 $modal-bg: #625b71;
+$danger: #dc3545;
+$danger-hover: #c82333;
+$danger-active: #bd2130;
 
 $link-color: #0057ca;
 // Font family
