--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -80,6 +80,33 @@
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
+.btn-custom-delete {
+  @include button-variant(
+    // Background color
+    variables.$danger,
+    // Border color
+    variables.$danger,
+    // Text color
+    variables.$body-bg,
+    // Hover background color
+    variables.$danger-hover,
+    // Hover border color
+    variables.$danger-hover,
+    // Hover text color
+    variables.$body-bg,
+    // Active background color
+    variables.$danger-active,
+    // Active border color
+    variables.$danger-active,
+    // Active text color
+    variables.$body-bg
+  );
+  padding: 10px 24px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  font-size: 1rem;
+  font-weight: 400;
+}
+
 [name="edit-profile"],
 [name="edit-my-listing-item"] {
   height: fit-content;
