feat: implement image modal with carousel for enhanced image viewing experience

--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -18,3 +18,14 @@
     }
   }
 }
+
+#imageModal {
+  .modal-content {
+    max-height: 80vh;
+  }
+  .carousel-item {
+    img {
+      object-fit: contain;
+    }
+  }
+}
