feat: improve layout and styling for better responsiveness and user experience

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -18,6 +18,10 @@ $bootstrap-icons-font-dir: "/fonts";
   scroll-behavior: smooth;
 }
 
+main {
+  overflow: hidden;
+}
+
 h1 {
   font-family: $font-family-base;
   font-size: 32px;
