--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -122,7 +122,7 @@
     width: 100%;
     .img-fluid,
     .carousel-image {
-      height: 100%;
+      width: 100%;;
       min-height: 12rem;
       border-radius: 0.5rem 0.5rem 0 0 !important;
     }
@@ -145,7 +145,8 @@
   .img-fluid,
   .carousel-image {
     
-    width: 100%;
+    height: 100%;
+    max-height: 35rem;
     
     object-fit: cover;
     cursor: zoom-in;
@@ -226,9 +227,12 @@
 
   .img-fluid {
     height: 100%;
-    max-height: 12rem;
+    max-height: 19rem;;
     @media (max-width: 767px) {
       border-radius: 0.5rem 0.5rem 0 0 !important;
+      max-height: 12rem;
+      width: 100%;
+      object-fit: cover;
     }
   }
 
